Take --gpu to Apple Silicon, at single float and without the axis fold
Phase 5 of todo-123, and the last one. `am.ik.gpu` gains a second device behind a
sealed `GpuDevice` seam: `MetalDriver` binds libobjc, Metal and
MetalPerformanceShaders through pure FFM (one handle per selector SHAPE, since
Apple's arm64 rule forbids sending objc_msgSend as the variadic it is declared as),
and `MetalGemm` runs `gemm.metal` -- compiled at RUN time from a string, so unlike
the PTX there is no generated artifact to check in and no toolchain, not even Xcode.

The member set is the CUDA one minus what measurement refused:

  - SINGLE FLOAT ONLY. MSL has no `double`, so a #d operand is a hard decline. The
    decline protocol is what makes that invisible, and torch: already builds #f.
  - the rank-2 product goes to MPS above 2^27 per matrix and to our tiled kernel
    below it and for every STACK, because a batched MPSMatrixDescriptor cannot take
    the zero stride a broadcast operand passes. The two agree bit for bit.
  - the AXIS FOLD is not a member at all: %la-fold-axis accumulates in double, which
    no float kernel reproduces, and the amax/amin half that needed no accumulator
    ties the CPU anyway (85 us against ~150 over 262144 f32 elements).
  - the thresholds are re-derived against this machine's own --simd column, because
    the floor is 77 us per COMMAND BUFFER rather than 16 per launch: 2^22 for a
    product, 2^17 element-wise, 2^18 strided.
  - the buffer pool is ours. Metal has no allocator pool, and a fresh MTLBuffer's
    pages fault in on the first write (506 us against 308 for one n=512 product).
    Scratch only, so it needs no invalidation rule; residency is still not built.

Two precision findings. MSL's `tanh` and `sinh` carry an absolute error floor near
zero -- 1.8e-4 relative at x=2e-4, which IS the 4.87e-5 the spike feared and which
does not reproduce on CUDA -- so both take a Maclaurin series below |x| = 1/4 and
now land at 2.7e-7 with the other ten. A